  * This bug was introduced in v0.13.2.AP (Commit 0e10faf)
- Improves `ProtectNVRAM` Feature
  * Eliminates post-boot logging as this may have negative impacts
- Improves `FindMenuShortcutEntry` Function
  * Now initially tries a exact match of the stored string against available entries
  * A match against substrings is only tried if an exact match is not found
- Limits CSR Operations to Apple Firmware
  * Extends limitation of misc SIP/CSR items to Apple firmware pending review of applicability


0.13.2.AP (19 Apr 2022):
-----------------------
- Adds `PanicFilter` Feature
  * RefindPlus now discards NVRAM write attempts of kernel panic information by default
  * Can be disabled using a new `decline_panicfilter` configuration token
  * Currently limited to when directly booting MacOS from RefindPlus
- Adds `SupplyAppleFB` Feature
  * Attempts to provide AppleFramebuffers on Macs when absent under certain circumstances
  * Can be disabled using a new `decline_applefb` configuration token
- Adds `TextHelp` Feature
  * Uses complementary text colours to improve legibility
  * Can be disabled using a new `decline_texthelp` configuration token
    - Only when using a custom title banner
    - Always on when using the default title banner
- Adds `IconRowMove` Feature
  * Allows repositioning the icon row position on the RefindPlus screen
    - Sometimes needed when icons block parts of custom banners
  * Base position can be specified using a new `icon_row_move` configuration token
- Adds `IconRowTune` Feature
  * Allows adjustments to the `IconRowMove` position
  * Offset value can be specified using a new `icon_row_tune` configuration token
- Adds `RansomDrives` Feature
  * Some types of firmware, notably on HP Notebooks, may lock some partitions
    - This renders them inaccessible or may even lead to RefindPlus hanging
  * Such partitions can be unlocked by setting a new `ransom_drives` configuration token