@@ -13,17 +13,17 @@
 EFI_STATUS AmendSysTable (VOID);
 
 // Check Compile Type - START
-#ifdef __MAKEWITH_GNUEFI // Compile Type = GNU_EFI
+#ifndef __MAKEWITH_TIANO // Compile Type = OTHER/GNU_EFI
 
 /**
-  @retval EFI_INCOMPATIBLE_VERSION  Running on incompatible GNUEFI compiled version
+  @retval EFI_INCOMPATIBLE_VERSION  Not running on compatible TianoCore compiled version
 **/
 EFI_STATUS AmendSysTable (VOID) {
     // NOOP if not compiled using EDK II
     return EFI_INCOMPATIBLE_VERSION;
 }
 
-#else // Compile Type = OTHER - TIANOCORE
+#else // Compile Type = TIANOCORE
 
 #include "../BootMaster/global.h"
 #include "../BootMaster/rp_funcs.h"
@@ -408,6 +408,21 @@ EFI_STATUS OurCreateEventEx (
     return EFI_SUCCESS;
 } // EFI_STATUS OurCreateEventEx()
 
+// DA-TAG: Return error on QueryVariableInfo calls
+//         Avoids crashes on UEFI 2.x spoof
+//         Assumes caller has error checking
+//
+//         TODO: Fully Emulate QueryVariableInfo
+EFI_STATUS EFIAPI OurQueryVariableInfo (
+    IN  UINT32  Attributes,
+    OUT UINT64 *MaximumVariableStorageSize,
+    OUT UINT64 *RemainingVariableStorageSize,
+    OUT UINT64 *MaximumVariableSize
+) {
+    // Always return error
+    return EFI_UNSUPPORTED;
+} // EFI_STATUS EFIAPI OurQueryVariableInfo()
+
 /**
   @retval EFI_SUCCESS               The command completed successfully.
   @retval EFI_OUT_OF_RESOURCES      Out of memory.
@@ -415,25 +430,45 @@ EFI_STATUS OurCreateEventEx (
   @retval EFI_PROTOCOL_ERROR        Unexpected Field Offset.
 **/
 EFI_STATUS AmendSysTable (VOID) {
-    EFI_BOOT_SERVICES *uBS;
+    UINTN                 FieldOffeset;
+    EFI_BOOT_SERVICES    *uBS;
+    EFI_RUNTIME_SERVICES *uRT;
 
+    /* Check EFI Revision */
     if (gST->Hdr.Revision >= TARGET_EFI_REVISION) {
         // Early Return
         return EFI_ALREADY_STARTED;
     }
 
-    if (gBS->Hdr.HeaderSize > EFI_FIELD_OFFSET(EFI_BOOT_SERVICES, CreateEventEx)) {
+    /* Check BootServices */
+    FieldOffeset = EFI_FIELD_OFFSET(EFI_BOOT_SERVICES, CreateEventEx);
+    if (gBS->Hdr.HeaderSize > FieldOffeset) {
         // Early Return
         return EFI_PROTOCOL_ERROR;
     }
-
     uBS = (EFI_BOOT_SERVICES *) AllocateCopyPool (sizeof (EFI_BOOT_SERVICES), gBS);
     if (uBS == NULL) {
         // Early Return
         return EFI_OUT_OF_RESOURCES;
     }
 
-    // Amend BootServices
+    /* Check RuntimeServices */
+    FieldOffeset = EFI_FIELD_OFFSET(EFI_RUNTIME_SERVICES, QueryVariableInfo);
+    if (gRT->Hdr.HeaderSize > FieldOffeset) {
+        FreePool (uBS);
+
+        // Early Return
+        return EFI_PROTOCOL_ERROR;
+    }
+    uRT = (EFI_RUNTIME_SERVICES *) AllocateCopyPool (sizeof (EFI_RUNTIME_SERVICES), gRT);
+    if (uRT == NULL) {
+        FreePool (uBS);
+
+        // Early Return
+        return EFI_OUT_OF_RESOURCES;
+    }
+
+    /* Amend BootServices */
     uBS->CreateEventEx   = OurCreateEventEx;
     uBS->Hdr.HeaderSize  = sizeof (EFI_BOOT_SERVICES);
     uBS->Hdr.Revision    = TARGET_EFI_REVISION;
@@ -444,16 +479,18 @@ EFI_STATUS AmendSysTable (VOID) {
     );
     gBS = uBS;
 
-    // Amend RuntimeServices
-    gRT->Hdr.HeaderSize  = sizeof (EFI_RUNTIME_SERVICES);
-    gRT->Hdr.Revision    = TARGET_EFI_REVISION;
-    gRT->Hdr.CRC32       = 0;
+    /* Amend RuntimeServices */
+    uRT->QueryVariableInfo   = OurQueryVariableInfo;
+    uRT->Hdr.HeaderSize      = sizeof (EFI_RUNTIME_SERVICES);
+    uRT->Hdr.Revision        = TARGET_EFI_REVISION;
+    uRT->Hdr.CRC32           = 0;
     REFIT_CALL_3_WRAPPER(
-        gBS->CalculateCrc32, gRT,
-        gRT->Hdr.HeaderSize, &gRT->Hdr.CRC32
+        gBS->CalculateCrc32, uRT,
+        uRT->Hdr.HeaderSize, &uRT->Hdr.CRC32
     );
+    gRT = uRT;
 
-    // Amend SystemTable
+    /* Amend SystemTable  */
     gST->BootServices    = gBS;
     gST->RuntimeServices = gRT;
     gST->Hdr.HeaderSize  = sizeof (EFI_SYSTEM_TABLE);
@@ -464,7 +501,7 @@ EFI_STATUS AmendSysTable (VOID) {
         gST->Hdr.HeaderSize, &gST->Hdr.CRC32
     );
 
-    // Flag Amendment
+    /* Flag Amendment */
     SetSysTab = TRUE;
 
     return EFI_SUCCESS;
