@@ -12,6 +12,11 @@
 - Improves `FindMenuShortcutEntry` Function
   * Now initially tries a exact match of the stored string against available entries
   * A match against substrings is only tried if an exact match is not found
+- Improves `SupplyUEFI` Feature
+  * The `QueryVariableInfo` Runtime service is now also emulated
+  * Avoid crashes from unavailability if called on emulated UEFI 2.x
+  * The UEFI 2.x emulation returns an `EFI_UNSUPPORTED` error
+  * Callers are expected to react appropriately to error
 - Limits CSR Operations to Apple Firmware
   * Extends limitation of misc SIP/CSR items to Apple firmware pending review of applicability
 
